[package]
name = "inter"
version = "0.0.2"
authors = ["pedrosf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.conv]
git = "https://github.com/Pedrocasf/conv"
rev = "33e1b9"
features = ["LittleEndian"]